--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -1,3 +1,50 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&display=swap');
+
+
+/*==||================GENERAL STYLES===================*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*==||================UTILITIES===================*/
+
+.login-title {
+  font-family: 'Baloo 2';
+}
+
+
+
+
+
+
+
+
+
+
+/*==||================SITE-WIDE===================*/
+
+
+
+
+
+
+
+
+
+
+
+
+/*==||================COMPONENTS===================*/
+
