Add styling and add div around login logo img

--- a/client/src/assets/styles.css
+++ b/client/src/assets/styles.css
@@ -6,26 +6,15 @@
 
 /*==||================GENERAL STYLES===================*/
 
-
-
-
-
-
-
-
+html {
+  background-color:#171717;
+}
 
 
 
 
 
 /*==||================UTILITIES===================*/
-
-.login-title {
-  font-family: 'Baloo 2';
-  font-size: 50px;
-}
-
-
 
 
 
@@ -42,9 +31,13 @@
 
 
 
-
-
-
-
 /*==||================COMPONENTS===================*/
 
+.login-title {
+  font-family: 'Baloo 2';
+  font-size: 50px;
+}
+
+login-container {
+
+}
